# sophia_sparql

./: Cargo.toml  README.md  README.txt
examples/: so_sparql.rs
src/: bgp.rs  binding.rs  exec.rs  expression.rs  function.rs  lib.rs  matcher.rs  ns.rs  number.rs  stash.rs  term.rs  test.rs  value.rs  wrapper.rs
src/function/: test.rs
src/matcher/: _ox2so.rs
src/value/: _number.rs  xsd_date_time.rs
