[package]
name = "sophia_sparql"
version = "0.1.0-alpha.0"
edition = "2021"
repository = "https://github.com/pchampin/sophia_sparql"
authors = ["Pierre-Antoine Champin <pierre-antoine@champin.net>"]
license = "CECILL-B"
description = "An über-preliminary implementation of a SPARQL engine for Sophia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiri = "0.2.2"
sophia = { version = "0.8.0-alpha.3", path = "../sophia_rs/sophia" }
spargebra = { version = "0.2.8", features = ["rdf-star"] }
thiserror = "1.0.44"
bigdecimal = "0.4.3"
num-bigint = "0.4.4"
chrono = { version = "0.4.38", features = ["alloc"] }
uuid = { version = "1.10.0", features = ["v5", "v7"] }

[dev-dependencies]
test-case = "3.3.1"
