[package]
name = "sophia_sparql"
version = "0.1.0-alpha.0"
edition = "2021"
repository = "https://github.com/pchampin/sophia_sparql"
authors = ["Pierre-Antoine Champin <pierre-antoine@champin.net>"]
license = "CECILL-B"
description = "An über-preliminary implementation of a SPARQL engine for Sophia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiri = "0.2"
sophia = { version = "0.8", path = "../sophia_rs/sophia" }
spargebra = { version = "0.3", features = ["rdf-star"] }
thiserror = "1.0"
bigdecimal = "0.4"
num-bigint = "0.4"
chrono = { version = "0.4", features = ["alloc"] }
uuid = { version = "1.11", features = ["v5", "v7"] }
rand = "0.8"

[dev-dependencies]
test-case = "3.3"

[lints.clippy]
enum_glob_use = "allow"
